<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="task"
            type="network.scau.com.tomatoclock.model.TomatoTask" />

        <variable
            name="vm"
            type="network.scau.com.tomatoclock.vm.TasksListVm" />

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">

            <Button
                android:id="@+id/drop_tomato"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="@dimen/activity_newtask_bar_btn_height"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/normal_padding"
                android:background="@drawable/item_recycle_bg_green_no_border"
                android:onClick="@{vm.backToListActivity}"
                android:text="@string/acticity_newtask_back"
                android:textColor="@color/colorBgWhite"
                android:textSize="@dimen/activity_normal_textsize_M" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/acticity_newtask_title"
                android:textColor="@color/colorBgWhite"
                android:textSize="@dimen/activity_normal_textsize_XXL" />

            <Button
                android:id="@+id/create_tomato"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="@dimen/activity_newtask_bar_btn_height"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/normal_padding"
                android:background="@drawable/item_recycle_bg_green_no_border"
                android:text="@string/acticity_newtask_create"
                android:textColor="@color/colorBgWhite"
                android:textSize="@dimen/activity_normal_textsize_M" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rl1"
            android:background="@color/colorBgWhite">

            <EditText
                android:id="@+id/edt_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_newtask_edit_title_height"
                android:layout_margin="@dimen/normal_padding"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/acticity_newtask_edit_title_hint"
                android:paddingLeft="@dimen/normal_padding"
                android:textColor="@color/colorTextWhite"
                android:textColorHint="@color/colorTextWhite"
                android:textSize="@dimen/activity_normal_textsize_L" />

            <EditText
                android:id="@+id/edt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/edt_title"
                android:layout_margin="@dimen/normal_padding"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/acticity_newtask_edit_content_hint"
                android:minHeight="@dimen/activity_newtask_edit_content_minheight"
                android:paddingLeft="@dimen/normal_padding"
                android:textColor="@color/colorTextWhite"
                android:textColorHint="@color/colorTextWhite"
                android:textSize="@dimen/activity_normal_textsize_L" />

s
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_newtask_selecttime_height"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/normal_padding"
                android:background="@drawable/activity_newtask_selecttime_bg">

                <TextView
                    android:id="@+id/tv_picktime"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ripple_choose_time"
                    android:clickable="true"
                    android:gravity="center"
                    android:padding="10dp"
                    android:onClick="@{vm.selectYourTime}"
                    android:text="Select Your Time"
                    android:textColor="@color/colorTextWhite"
                    android:textSize="@dimen/activity_normal_textsize_M" />

            </RelativeLayout>


        </RelativeLayout>


    </RelativeLayout>

</layout>
